# philippides-svn

philippides/: AUTHORS  Doxyfile  Makefile.in  classtool.pl  configure.in.in
philippides/admin/CVS/: Entries  Tag
philippides/doc/: Makefile.am  Makefile.in
philippides/doc/en/: Makefile.am  Makefile.in  index.docbook
philippides/src/: Athlet.cpp  Athlet.h  AthletDtd.h  AthletParser.cpp  AthletParser.h  DbWidget.cpp  DbWidget.h  DbWidgetBase.ui  Exceptions.h  Makefile.am  Makefile.in  MapWidget.cpp  MapWidget.h  Run.cpp  Run.h  RunDialog.cpp  RunDialog.h  RunDialogBase.ui  RunDtd.h  RunListViewItem.cpp  RunListViewItem.h  RunParser.cpp  RunParser.h  RunPtrList.cpp  RunPtrList.h  StatsDialog.cpp  StatsDialog.h  StatsDialogBase.ui  StatsWidget.cpp  StatsWidget.h  TrackEditorDialog.cpp  TrackEditorDialog.h  TrackEditorDialogBase.ui  Wizard.cpp  Wizard.h  WizardBase.ui  main.cpp  philippides.cpp  philippides.desktop  philippides.h  (+3 more)
philippides/src/pics/: Makefile.am
philippides/src/tests/: Makefile  testAthlet.cpp  testRun.cpp
philippides/src/xslt/: Makefile.am  athlet.html  athlet.xml  athlet2html.xsl  out.html  run2html.xsl
